<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/info"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/Info"/>
    <item
        android:id="@+id/contatti"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/contatti"/>
    <item
        android:id="@+id/moodle"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/moodle"/>
    <item
        android:id="@+id/migliora"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/migliora">
    </item>
    <item
        android:id="@+id/exit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/exit"/>

</menu>