<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/Email" />

    <TextView
        android:id="@+id/Dir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="50dp"
        android:text="@string/dir_name" />

    <EditText
        android:id="@+id/Dir_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Dir"
        android:layout_alignBottom="@+id/Dir"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/dir_email" />

    <TextView
        android:id="@+id/Vice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Dir"
        android:layout_below="@+id/Dir"
        android:layout_marginTop="20dp"
        android:text="@string/vice_name" />

    <EditText
        android:id="@+id/Vice_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Vice"
        android:layout_alignBottom="@+id/Vice"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/vice_email" />

    <TextView
        android:id="@+id/Did"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Vice"
        android:layout_below="@+id/Vice"
        android:layout_marginTop="20dp"
        android:text="@string/did_name" />

    <EditText
        android:id="@+id/Did_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Did"
        android:layout_alignBottom="@+id/Did"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/did_email" />

    <TextView
        android:id="@+id/Tel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Email"
        android:layout_below="@+id/Email"
        android:layout_marginTop="130dp"
        android:text="@string/tel" />

    <TextView
        android:id="@+id/Sede1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Did"
        android:layout_below="@+id/Tel"
        android:layout_marginTop="25dp"
        android:text="@string/sede1_name" />

    <EditText
        android:id="@+id/Sede1_Num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Sede2"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="phone"
        android:text="@string/sede1_num" />

    <TextView
        android:id="@+id/Sede2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Sede1"
        android:layout_below="@+id/Sede1"
        android:layout_marginTop="25dp"
        android:text="@string/sede2_name" />

    <EditText
        android:id="@+id/Sede2_Num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Sede2"
        android:layout_alignBottom="@+id/Sede2"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="phone"
        android:text="@string/sede2_num" />

    <TextView
        android:id="@+id/Succ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Sede2"
        android:layout_below="@+id/Sede2"
        android:layout_marginTop="25dp"
        android:text="@string/succ_name" />

    <EditText
        android:id="@+id/Succ_Num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Succ"
        android:layout_alignBottom="@+id/Succ"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="phone"
        android:text="@string/succ_num" >
    </EditText>

    <TextView
        android:id="@+id/Indi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Tel"
        android:layout_below="@+id/Tel"
        android:layout_marginTop="140dp"
        android:text="@string/indi" />

    <TextView
        android:id="@+id/Sede"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Succ"
        android:layout_below="@+id/Indi"
        android:layout_marginTop="20dp"
        android:text="@string/sede_name" />

    <EditText
        android:id="@+id/Sede_Indi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Sede"
        android:layout_alignBottom="@+id/Sede"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:text="@string/sede_indi" />

    <TextView
        android:id="@+id/Succ_IndiName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Sede"
        android:layout_below="@+id/Sede"
        android:layout_marginTop="20dp"
        android:text="@string/succ_name" />

    <EditText
        android:id="@+id/Succ_Indi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Succ_IndiName"
        android:layout_alignBottom="@+id/Succ_IndiName"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:text="@string/succ_indi" />

</RelativeLayout>