<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sfondomesseapp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/TextDev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="25dp"
        android:text="@string/dev"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/TextAmbro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TextDev"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="30dp"
        android:maxWidth="100dp"
        android:text="@string/ambro"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/TextDebla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/TextAmbro"
        android:layout_marginRight="40dp"
        android:maxWidth="100dp"
        android:text="@string/debla"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/TextGraphic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="115dp"
        android:layout_marginRight="110dp"
        android:layout_marginTop="145dp"
        android:text="@string/graphic"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/TextGrezz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="75dp"
        android:layout_marginTop="192dp"
        android:text="@string/grezzana"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/TextOtdev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="257dp"
        android:text="@string/otdev"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/TextBenati"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TextDev"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="145dp"
        android:layout_marginTop="255dp"
        android:text="@string/benati"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/TextIervasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextBenati"
        android:layout_alignBottom="@+id/TextBenati"
        android:layout_alignLeft="@+id/TextDebla"
        android:maxWidth="100dp"
        android:text="@string/iervasi"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/TextBianchi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextBenati"
        android:layout_below="@+id/TextBenati"
        android:layout_marginTop="25dp"
        android:text="@string/bianchi"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black" />

</RelativeLayout>